--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "bin/clean",
+    "refresh": "bin/refresh"
   },
   "dependencies": {
+    "@types/react-window": "^1.8.8",
     "next": "^14.0.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-window": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
