buynch more code

--- a/compose.yaml
+++ b/compose.yaml
@@ -89,6 +89,8 @@ services:
       #- "OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g"
       ## Uncomment to increase the virtual memory map count
       #- "max_map_count=262144"
+    volumes:
+      - opensearchdata:/usr/share/opensearch/data
 
   ## If you wish to use Elasticsearch, comment out opensearch image above and
   ## uncomment this block. Do the same in the composer.healthcheck.yaml file.
@@ -161,6 +163,7 @@ services:
 volumes:
   appdata:
   dbdata:
+  opensearchdata:
   rabbitmqdata:
   sockdata:
   ssldata:
