--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -5,3 +5,8 @@ NEXT_PUBLIC_MAGENTO_MEDIA_URL=https://magento.test/media
 
 # Allow self-signed certificates in development
 NODE_TLS_REJECT_UNAUTHORIZED=0
+
+# Supabase Configuration (optional - for cross-device sync)
+# Get these from your Supabase project dashboard: https://supabase.com/dashboard
+# NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
