--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "refresh": "bin/refresh"
   },
   "dependencies": {
-    "@types/react-window": "^1.8.8",
+    "@supabase/supabase-js": "^2.39.0",
     "next": "^14.0.4",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-window": "^2.2.5"
