--- a/compose.yaml
+++ b/compose.yaml
@@ -130,21 +130,25 @@ services:
     ports:
       - "1080:1080"
 
-  frontend:
-    image: node:20-alpine
-    working_dir: /app
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=development
-      - NODE_TLS_REJECT_UNAUTHORIZED=0
-      - MAGENTO_GRAPHQL_URL=https://app:8443/graphql
-    command: sh -c "npm install && npm run dev"
-    depends_on:
-      - app
+  ## Frontend is run on the HOST, not in Docker, to avoid file sync issues.
+  ## Run: cd frontend && npm run dev
+  ## Access: http://localhost:3001
+  ## See CLAUDE.md for details.
+  #frontend:
+  #  image: node:20-alpine
+  #  working_dir: /app
+  #  ports:
+  #    - "3000:3000"
+  #  volumes:
+  #    - ./frontend:/app
+  #    - /app/node_modules
+  #  environment:
+  #    - NODE_ENV=development
+  #    - NODE_TLS_REJECT_UNAUTHORIZED=0
+  #    - MAGENTO_GRAPHQL_URL=https://app:8443/graphql
+  #  command: sh -c "npm install && npm run dev"
+  #  depends_on:
+  #    - app
 
   ## Cloudflare tunnel support, uncomment to enable
   #tunnel:
