--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -7,6 +7,10 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3001
 # Allow self-signed certificates in development
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
+# Google Analytics 4 (optional - for production analytics)
+# Get measurement ID from: https://analytics.google.com
+# NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
 # Supabase Configuration (optional - for cross-device sync)
 # Get these from your Supabase project dashboard: https://supabase.com/dashboard
 # NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
