--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,15 @@
     "refresh": "bin/refresh"
   },
   "dependencies": {
+    "@next/third-parties": "^14.0.0",
     "@supabase/supabase-js": "^2.39.0",
     "framer-motion": "^12.29.2",
     "next": "^14.0.4",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-window": "^2.2.5"
+    "react-window": "^2.2.5",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
